--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -5,7 +5,7 @@
     padding-right:30px;
     padding-left:30px;
     padding-bottom: 48px;
-    background-image: url(../images/products/ice-bcg1_mob.jpg);
+    background-image: url(../images/galary&customers/icebgim1.jpg);
        }  
         .customer-box__img{
     margin: 0 auto; 
@@ -48,7 +48,7 @@ font-family: 'Montserrat';
            screen and (min-resolution: 192dpi) and (max-width:767px),
            screen and (min-resolution: 2dppx) and (max-width:767px) {
                .customer-box {
-                   background-image: url(../images/products/ice-bcg1_mob@2x.jpg);
+                   background-image: url(../images/galary&customers/icebgim2@2x.jpg);
                }
            }
 
@@ -60,7 +60,7 @@ font-family: 'Montserrat';
         font-size: 14px;
     }
                     .customer-box {
-                            background-image: url(../images/products/ice-bcg_tab.jpg);
+                            background-image: url(../images/galary&customers/icebgit1.jpg);
                         }
  .customer-box__comment {
     max-width: 705px;
@@ -70,7 +70,7 @@ font-family: 'Montserrat';
 screen and (min-resolution: 192dpi) and (min-width:768px),
 screen and (min-resolution: 2dppx) and (min-width:768px) {
                 .customer-box {
-                        background-image: url(../images/products/ice-bcg_tab@2x.jpg);
+                        background-image: url(../images/galary&customers/icebgit2@2x.jpg);
                     }
 }
 
@@ -82,7 +82,7 @@ screen and (min-resolution: 2dppx) and (min-width:768px) {
                 font-size: 16px;
             }
     .customer-box {
-     background-image: url(../images/products/ice-bcg_desc.jpg);
+     background-image: url(../images/galary&customers/icebgid1.jpg);
                         }
  .customer-box__comment {
      max-width: 968px;
@@ -93,7 +93,7 @@ screen and (min-resolution: 2dppx) and (min-width:768px) {
 screen and (min-resolution: 192dpi) and (min-width:1200px),
 screen and (min-resolution: 2dppx) and (min-width:1200px) {
     .customer-box {
-        background-image: url(../images/products/ice-bcg_desc@2x.jpg);
+        background-image: url(../images/galary&customers/icebgid2@2x.jpg);
     }
 }
    
