--- a/src/partials/modal-windows.html
+++ b/src/partials/modal-windows.html
@@ -112,8 +112,40 @@
             Buy now
         </p>
         <div class="buy-now-items"> 
+            <div class="buy-now-items__item icecream">
+                <div class="buy-now-img-wrapper">
+                    <picture> 
+                    <source srcset="./images/icecream_modal.jpg 1x, ./images/icecream_modal@2x.jpg 2x">
+                    <img src="./images/icecream_modal.jpg" alt="icecream">
+                    </picture>
+                </div>
+                <p class="buy-now-text">ice cream</p>
+            </div>
+
+            <div class="buy-now-items__item icecoffee">
+                <div class="buy-now-img-wrapper">
+                    <picture>
+                        <source srcset="./images/icecoffee_modal.jpg 1x, ./images/icecoffee_modal@2x.jpg 2x">
+                        <img src="./images/icecoffee_modal.jpg" alt="icecoffee">
+                    </picture>
+                </div>
+                <p class="buy-now-text">ice coffee</p>
+            </div>
+
+
+            <div class="buy-now-items__item milkshake">
+                <div class="buy-now-img-wrapper">
+                    <picture>
+                        <source srcset="./images/milkshake_modal.jpg 1x, ./images/milkshake_modal@2x.jpg 2x">
+                        <img src="./images/milkshake_modal.jpg" alt="milkshake">
+                    </picture>
+                </div>
+                <p class="buy-now-text">milkshake</p>
+            </div>
 
         </div>
+
+
         <form class="modal-form">
             <label class="modal-form-field">
                 <span class="modal-form-input-wrapper">
