--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -110,7 +110,96 @@
             margin-bottom: 20px;
         }
 
-          
+           .buy-now-items {
+               display: flex;
+               flex-direction: column;
+           }
+
+            .buy-now-items__item {
+            filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+            border-radius: 15.7808px;
+            margin: 0 auto;
+            width: 130px;
+            height: 135px;
+            margin-bottom: 80px;
+            padding: 95px 0 20px;
+            text-align: center;
+            position: relative;
+
+                &.icecream {
+                    border: 2px solid #96AF8C;
+
+                    & .buy-now-img-wrapper {
+                    background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+                    box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+
+                    }
+                }
+
+
+                &.icecoffee {
+                    border: 2px solid #EFD478;
+                    background: #EFD478;
+
+
+                    & .buy-now-img-wrapper {
+                    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+                    box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+                    
+                        }
+
+                }
+
+                &.milkshake {
+                border: 2px solid #D6936D;
+
+                & .buy-now-img-wrapper {
+                background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+                box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+                
+                    }
+
+                }
+
+            }
+
+            .buy-now-items__item:last-child {
+                margin-bottom: 0px;
+            }
+
+            .buy-now-items__item:first-child {
+                margin-top: 60px;
+            }
+
+            .buy-now-text {
+                font-family: 'Montserrat';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 1.25;
+                text-align: center;
+                letter-spacing: 0.04em;
+                text-transform: uppercase;
+                    
+            }
+
+
+            .buy-now-img-wrapper {
+                border-radius: 50%;
+                background-color: #96AF8C;
+                position: absolute;
+                top: -60px;
+                left: 0;
+                padding-bottom: 8px;
+
+                background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+                box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+
+                    & img {
+                        border-radius: 50%;
+                    }
+
+            }
 }
 
 
