modal window buy now desktop

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -11,6 +11,9 @@
     --dots-color: #D9D9D9;
     --dots-color-active:#84A178;
     --transition-dur-func: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    --background-icecoffee-modal-window:#EFD478;
+    --background-milkshake-modal-window: #D6936D;
+    --background-icecream-modal-window:#96AF8C;
 
     --indent: 30px;
     --items: 3;
