--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -127,7 +127,7 @@
             position: relative;
 
                 &.icecream {
-                    border: 2px solid #96AF8C;
+                    border: 2px solid var(--background-icecream-modal-window);
 
                     & .buy-now-img-wrapper {
                     background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
@@ -138,8 +138,8 @@
 
 
                 &.icecoffee {
-                    border: 2px solid #EFD478;
-                    background: #EFD478;
+                    border: 2px solid var(--background-icecoffee-modal-window);
+                    background: var(--background-icecoffee-modal-window);
 
 
                     & .buy-now-img-wrapper {
@@ -151,7 +151,7 @@
                 }
 
                 &.milkshake {
-                border: 2px solid #D6936D;
+                border: 2px solid var(--background-milkshake-modal-window);
 
                 & .buy-now-img-wrapper {
                 background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
@@ -289,5 +289,91 @@
         width: 12px;
         height: 12px;
     }
+
+.buy-now-items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 80px;
+    margin-bottom: 8px;
+}
+
+.buy-now-items__item {
+    filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+    border-radius: 15.7808px;
+    margin: 0 auto;
+    width: 130px;
+    height: 135px;
+    padding: 95px 0 20px;
+    text-align: center;
+    position: relative;
+
+    &.icecream {
+        border: 2px solid var(--background-icecream-modal-window);
+
+        & .buy-now-img-wrapper {
+            background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+            box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+
+        }
+    }
+
+
+    &.icecoffee {
+        border: 2px solid var(--background-icecoffee-modal-window);
+        background: var(--background-icecoffee-modal-window);
+
+
+        & .buy-now-img-wrapper {
+            background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+            box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+
+        }
+
+    }
+
+    &.milkshake {
+        border: 2px solid var(--background-milkshake-modal-window);
+
+        & .buy-now-img-wrapper {
+            background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+            box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+
+        }
+
+    }
+
+}
+
+.buy-now-text {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.25;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+}
+
+
+.buy-now-img-wrapper {
+    border-radius: 50%;
+    background-color: #96AF8C;
+    position: absolute;
+    top: -60px;
+    left: 0;
+    padding-bottom: 8px;
+
+    background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+    box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+
+    & img {
+        border-radius: 50%;
+    }
+
+}
+
 }
 
