--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import './base/container';
 
 @import './components/button';
+@import './components/mobile-menu';
 @import './components/modal-windows';
 @import './components/modal-form';
 
