modal buy now mobile-dekstop

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,7 +64,7 @@
           <a class="mobile-menu__link link" href="#contact">Contact</a>
         </li>
       </ul>
-      <button type="button" class="mobile-menu__modal-btn">
+      <button type="button" class="mobile-menu__modal-btn" data-modal-buynow-mobile-open>
         <span>Buy now</span>
         <svg class="mobile-menu__modal-btn__icon" width="5">
           <use href="./images/sprite.svg#more-icon"></use>
