--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -155,8 +155,10 @@
 
   .header-btn-burger {
     margin-right: 31px;
+    z-index: 900;
   }
 
+  // .header-btn-burger {z-index: 900}
   .header-btn-modal {
     display: flex;
     align-items: center;
@@ -164,7 +166,8 @@
     outline: none;
 
     padding: 12px 34px;
-
+    z-index: 900;
+    
     @include font(14px, 600, 1.21);
 
     border-radius: 10px;
