--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,13 +29,16 @@
         <use href="./images/sprite.svg#burger-icon"></use>
       </svg>
     </button>
-    
-    <button type="button" class="button header-btn-modal" data-modal-buynow-open>
+
+    <button
+      type="button"
+      class="header-btn-modal button-color"
+      data-modal-buynow-open
+    >
       Buy now
       <svg class="header-btn-modal__icon">
         <use href="./images/sprite.svg#more-icon"></use>
       </svg>
-      
     </button>
   </div>
   <div class="mobile-menu" data-menu>
@@ -64,7 +67,11 @@
           <a class="mobile-menu__link link" href="#contact">Contact</a>
         </li>
       </ul>
-      <button type="button" class="mobile-menu__modal-btn" data-modal-buynow-mobile-open>
+      <button
+        type="button"
+        class="mobile-menu__modal-btn"
+        data-modal-buynow-mobile-open
+      >
         <span>Buy now</span>
         <svg class="mobile-menu__modal-btn__icon" width="5">
           <use href="./images/sprite.svg#more-icon"></use>
@@ -139,7 +146,7 @@
       </picture>
     </div>
 
-    <div class="hero-big-ice-cream">
+    <div class="hero-big-ice-cr">
       <picture>
         <source
           srcset="
@@ -171,6 +178,15 @@
           alt="Фотография мороженого"
         />
       </picture>
+      <svg class="hero-big-ice-cr_gr">
+        <use href="./images/sprite.svg#gr"></use>
+      </svg>
+      <svg class="hero-big-ice-cr_r">
+        <use href="./images/sprite.svg#r"></use>
+      </svg>
+      <svg class="hero-big-ice-cr_y">
+        <use href="./images/sprite.svg#y"></use>
+      </svg>
     </div>
   </section>
 </header>
