--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -24,8 +24,8 @@
               "
               media="(max-width:767px)" />
             <img
-              width="200px"
-              height="150px"
+              width="200"
+              height="150"
               src="/src/images/galary&customers/customer1.jpg"
               alt="clients photo"
               class="customer-box__img"
@@ -60,8 +60,8 @@
               "
               media="(max-width:767px)" />
             <img
-              width="200px"
-              height="150px"
+              width="200"
+              height="150"
               src="/src/images/galary&customers/customer2.jpg"
               alt="clients photo"
               class="customer-box__img"
@@ -96,8 +96,8 @@
               "
               media="(max-width:767px)" />
             <img
-              width="100px"
-              height="150px"
+              width="100"
+              height="150"
               src="/src/images/galary&customers/customer3.jpg"
               alt="clients photo"
               class="customer-box__img"
@@ -131,8 +131,8 @@
               "
               media="(max-width:767px)" />
             <img
-              width="200px"
-              height="150px"
+              width="200"
+              height="150"
               src="/src/images/galary&customers/customer4.jpg"
               alt="clients photo"
               class="customer-box__img"
