--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import './components/button';
 @import './components/modal-windows';
 @import './components/modal-form';
+@import './components/prod-modal';
 
 @import './layout/header';
 @import './layout/products';
