--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -28,7 +28,7 @@
                     </div>
                
                 
-                <button class="button-info" type="button">
+                <button class="button-info" type="button" data-modal-open>
                     <svg class="info-icon" width="40" height="20">
                         <use href="./images/sprite1.svg#arrow-icon"></use>
                     </svg>
@@ -60,7 +60,7 @@
                 </div>
 
                 
-                <button class="button-info" type="button">
+                <button class="button-info" type="button" data-modal-open>
                     <svg class="info-icon" width="40" height="20">
                         <use href="./images/sprite1.svg#arrow-icon"></use>
                     </svg>
@@ -90,7 +90,7 @@
                 </div>
 
                 
-                <button class="button-info" type="button">
+                <button class="button-info" type="button" data-modal-open>
                     <svg class="info-icon" width="40" height="20">
                         <use href="./images/sprite1.svg#arrow-icon"></use>
                     </svg>
