--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -9,6 +9,7 @@
     background-color: rgba(0, 0, 0, .2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    overflow-y: auto;
 
     &.is-hidden {
         opacity: 0;
@@ -24,11 +25,12 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 280px;
+        width: 282px;
         height: auto;
         background-color: #ffffff;
         border-radius: 10px;
         padding: 28px 28px;
+
 
     }
 
