--- a/src/partials/modal-windows.html
+++ b/src/partials/modal-windows.html
@@ -177,11 +177,10 @@
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" placeholder="Phone">
                     </span>
                 </label>
-                
                 <label class="modal-form-field modal-form-comment">
                     <textarea name="user_message" class="modal-form-message" placeholder="Comment"></textarea>
                 </label>
-                <button type="submit" class="modal-form-submit button-color">Submit</button>
+                <button type="submit" class="modal-form-submit button-color button-prod">Submit</button>
             </form>
         </form>
     </div>
