--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,7 +53,7 @@
           <use href="./images/sprite.svg#mobile-close-icon"></use>
         </svg>
       </button>
-      <ul class="mobile-menu__list">
+      <ul class="mobile-menu__list" data-menu-close-link>
         <li class="mobile-menu__item">
           <a class="mobile-menu__link link" href="#home">Home</a>
         </li>
