--- a/src/sass/layout/_slickcustomers.scss
+++ b/src/sass/layout/_slickcustomers.scss
@@ -29,6 +29,7 @@
     padding: 0;
     border-radius: 44px;
     background-color: var(--dots-color);
+    border: none;
 }
 
 .customer-box__list .slick-dots .slick-active button {
