--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,6 +3,10 @@
     <div class="footer-tagline">
         <p class="footer-tagline_thin">homemade ice cream made </p>
         <p class="footer-tagline_thick">with passion</p>
+                <div class="overlay">
+                    <img src="./images/tiger.jpg" alt="Tiger with ice cream" width="140px" height="140px">
+                    <p class="joke">Thank you for watching the I-Tigers team`s work!!!</p>
+                </div>
     </div>
     <div class="footer-contact">
         <ul class="footer-contact__list list">
