--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,36 @@
 
 .footer-tagline {
     width: 234px;
+    position: relative;
+    overflow: hidden;
+
+&:hover .overlay {
+transform: translateY(0%);
+    }
 }
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    transform: translateY(-100%);
+    transition: transform var(--transition-func);
+    background-color: var(--background-color);
+}
+
+.joke {
+color: var(--button-color);
+font-size: 12px;
+font-weight: 700;
+line-height: 1.86;
+padding-left: 20px;
+align-items: center;
+
+}
+
 .footer-tagline_thin {
 color: var(--title-text-color-secondary);
 font-size: 18px;
@@ -19,6 +48,7 @@ font-weight: 700;
 line-height: 1.22;
 text-transform: uppercase;
 letter-spacing: 0.06em;
+
 }
 
 .footer-contact__list {
@@ -76,8 +106,9 @@ transition: color var(--transition-func);
 .copyright {
     width: 100%;
     padding-top: 16px;
-    margin-bottom: 16px;
+    margin-bottom: 62px;
     border-top: 1px solid #E1E1E1;
+
 }
 .copyright__text {
     width: 280px;
@@ -91,6 +122,8 @@ transition: color var(--transition-func);
     padding-left: 60px;
     padding-right: 60px;
 }
+
+
 
 // TABLET
 
