--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
         <p class="footer-tagline_thin">homemade ice cream made </p>
         <p class="footer-tagline_thick">with passion</p>
                 <div class="overlay">
-                    <img src="./images/tiger.jpg" alt="Tiger with ice cream" width="140px" height="140px">
+                    <img src="./images/tiger.jpg" alt="Tiger with ice cream" width="140" height="140">
                     <p class="joke">Thank you for watching the I-Tigers team`s work!!!</p>
                 </div>
     </div>
